feat:下方圓盤動畫/左下光點動畫

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
     <!-- content，各自頁面的html寫在這邊以下都是範例 -->
     <main>
         <div class="index_block">
-            <!-- <div data-depth="0.2"> -->
+            <!-- 右側進度條跳動 -->
                 <img src="./img/index/011.jpg" class="-margin0auto index_bcg_desktop">
                 <div class="index_right_side">
                     <img src="./img/index/123.png" class="index_bar_img1">
@@ -61,13 +61,19 @@
                 <div class="index_right_side">
                     <img src="./img/index/321.png" class="index_bar_img6">
                 </div>
+
+                <!-- 下方圓盤 -->
+                <img src="./img/index/04.png" class="index_disk">
+
+                <!-- 左下暗點 -->
+                <span class="index_dark_point1"></span>
+                <span class="index_dark_point2"></span>
+                <span class="index_dark_point3"></span>
+
+
                 <!-- mobile背景 -->
                 <img src="./img/index/031.jpg" class="=margin0auto index_bcg_mobile">
-            <!-- </div> -->
-            <!-- <div data-depth="0.6">
-                <img src="./img/index/01.jpg" class="-margin0auto index_bcg_desktop">
-                <img src="./img/index/03.jpg" class="=margin0auto index_bcg_mobile">
-            </div> -->
+
 
             <div class="index_title">
                 <h1 class="main-color" data-spotlight="Tián lám 2022 智慧全球科技聚策展！">
