feat 完成companyback的RWD(奕德請幫我加上叉叉icon)

--- a/src/companyback.html
+++ b/src/companyback.html
@@ -58,7 +58,7 @@
       <section>
 
         <ul class="companyback_main_chatbox">
-          <li>
+          <li class="one">
             <div class="companyback_search">
               <!-- icon -->
               <input class="companyback_searchinput mt-44" type="search" name="search" placeholder="Search"
@@ -169,7 +169,7 @@
           </li>
 
 
-          <li>
+          <li class="two">
             <article class="companyback_back_chatbox  mt-43">
               <div class="chat_title ">
                 <i class="fa-solid fa-address-card main-color"></i>
@@ -198,7 +198,7 @@
               </div>
               <div class="chat_input mt-35">
                 <input type="text" placeholder="請輸入訊息內容..." class="">
-                <button class="btn-short ml-5" ><i class="fa-solid fa-paper-plane"></i></button>
+                <button class="btn-short ml-5"><i class="fa-solid fa-paper-plane"></i></button>
               </div>
             </article>
           </li>
