feat 增加info和live一點點

--- a/src/companyback_info.html
+++ b/src/companyback_info.html
@@ -36,17 +36,17 @@
             <li class="">
               <div class="field pt-45">
                 <h2>策展名稱:</h2>
-                <input type="text" id="email_1" required autocomplete="off" class="" />
+                <input type="text" id="email_1" required autocomplete="off" placeholder="" />
                 <label for="email_1" title="Display name" data-title="策展名稱"></label>
               </div>
               <div class="field pt-45">
                 <h2>廠商名稱:</h2>
-                <input type="text" id="email_2" required autocomplete="off" class="" />
+                <input type="text" id="email_2" required autocomplete="off" />
                 <label for="email_2" title="Company name" data-title="廠商名稱"></label>
               </div>
               <div class="field pt-45">
                 <h2>影片網址:</h2>
-                <input type="text" id="email_3" required autocomplete="off" class="" />
+                <input type="text" id="email_3" required autocomplete="off" />
                 <label for="email_3" title="Video address" data-title="影片網址"></label>
               </div>
             </li>
