feat:新增點擊/關閉彈窗

--- a/src/companyback.html
+++ b/src/companyback.html
@@ -177,6 +177,7 @@
                   <h3>廠商名稱</h3>
                   <h5>Online</h5>
                 </span>
+                <i class="fa-solid fa-xmark" id="c_back_close"></i>
 
 
               </div>
@@ -222,6 +223,7 @@
   <!-- 先連結main再連結各自設的js -->
   <script src="js/main.min.js"></script>
   <script src="js/login.min.js"></script>
+  <script src="js/c_back.min.js"></script>
   <!-- flatpickr -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
