--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
     </script>
     <!-- is.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
+    <!-- SweetAlert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>聚策展</title>
 </head>
 
