feat:更改彈窗設定，刪除空值scss

--- a/src/companyback.html
+++ b/src/companyback.html
@@ -203,6 +203,7 @@
               </div>
             </article>
           </li>
+          <!-- <div class="c_bank_mask"></div> -->
         </ul>
 
 
