--- a/src/live.html
+++ b/src/live.html
@@ -14,8 +14,8 @@
   <link rel="icon" href="img/tianlam-logo-mainblack.svg" />
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <!-- aos動畫 -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <!-- aos -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">   
   <!-- VUE -->
   <script src="js/vue.min.js"></script>
   <!-- EmailJS -->
@@ -99,7 +99,7 @@
     <!-- 下方廠商介紹區 -->
     <div>
       <div class="live-company">
-        <ul class="live-company-text">
+        <ul class="live-company-text"  data-aos="fade-right" data-aos-duration="2000">
           <li>
             <div class="live-company-title">
               <img src="img/live/compnay-title.png" alt="現在直播廠商" />
@@ -115,42 +115,17 @@
             <h3>email: test@gmail.com</h3>
           </li>
         </ul>
-        <img src="img/live/live_circle_2.svg" alt="圓形圖案" class="img-circle">
+        <img src="img/live/live_circle_2.svg" alt="圓形圖案" class="img-circle" data-aos="fade" data-aos-duration="3000">
       </div>
     </div>
   </main>
   <!-- footer -->
   <footer>@@include('layout/footer.html')</footer>
   <script>
-    new Vue({
-      el: '#live_pc', //在這講是給誰執行
-      data() {
-        return {
-          pcOpen: false,
-        };
-      },
-      methods: {
-        toggle() {
-          this.pcOpen = !this.pcOpen;
-        }
-      },
-    }); //給初值，在裡面描述屬性跟方法，包在物件{}裡
-    new Vue({
-      el: '#live_rwd', //在這講是給誰執行
-      data() {
-        return {
-          rwdOpen: false,
-        };
-      },
-      methods: {
-        toggle() {
-          this.rwdOpen = !this.rwdOpen
-        }
-      },
-    }); //給初值，在裡面描述屬性跟方法，包在物件{}裡
-
 
   </script>
+  <!-- aos -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <!-- 先連結main再連結各自設的js -->
   <script src="js/main.min.js"></script>
   <script src="js/login.min.js"></script>
