feat 還差576fwd目前input表格會跑掉但沒跑版(第一次demo用)

--- a/src/companyback_info.html
+++ b/src/companyback_info.html
@@ -36,18 +36,18 @@
             <li class="">
               <div class="field pt-45">
                 <h2>策展名稱:</h2>
-                <input type="text" id="email_1" required autocomplete="off" placeholder="" />
-                <label for="email_1" title="Display name" data-title="策展名稱"></label>
+                <input type="text" id="ex_name" required autocomplete="off" placeholder="" />
+                <label for="ex_name" title="Display name" data-title="策展名稱"></label>
               </div>
               <div class="field pt-45">
                 <h2>廠商名稱:</h2>
-                <input type="text" id="email_2" required autocomplete="off" />
-                <label for="email_2" title="Company name" data-title="廠商名稱"></label>
+                <input type="text" id="c_company_name" required autocomplete="off" />
+                <label for="c_company_name" title="Company name" data-title="廠商名稱"></label>
               </div>
               <div class="field pt-45">
                 <h2>影片網址:</h2>
-                <input type="text" id="email_3" required autocomplete="off" />
-                <label for="email_3" title="Video address" data-title="影片網址"></label>
+                <input type="text" id="vedio_add" required autocomplete="off" />
+                <label for="vedio_add" title="Video address" data-title="影片網址"></label>
               </div>
             </li>
             <li>
@@ -58,11 +58,11 @@
           </ul>
           <div class="field introduce pt-60">
             <h2>廠商介紹:</h2>
-            <textarea name="" class="fle" id="email" rows="8" required autocomplete="off" size="300"></textarea>
-            <label for="email" title="Introduce" data-title="廠商介紹"></label>
+            <textarea name="" class="fle" id="intr_company" rows="8" required autocomplete="off" size="300"></textarea>
+            <label for="intr_company" title="Introduce" data-title="廠商介紹"></label>
           </div>
 
-          <ul class="robot pt-60">
+          <ul class="robot">
             <li>
               <span>
                 <h2>客服機器人:</h2>
@@ -80,7 +80,7 @@
           </ul>
 
 
-          <ul class="environment pt-60">
+          <ul class="environment ">
             <li>
               <span>
                 <h2>廠商攤位樣式:</h2>
