--- a/src/companyback_live.html
+++ b/src/companyback_live.html
@@ -42,13 +42,13 @@
 
                 <div class="field pt-45">
                     <h2>技術名稱 :</h2>
-                    <input type="text" id="email" required autocomplete="off" class="" />
-                    <label for="email" title="Skill name" data-title="技術名稱"></label>
+                    <input type="text" id="skill_name0" required autocomplete="off" class="" />
+                    <label for="skill_name0" title="Skill name" data-title="技術名稱"></label>
                 </div>
                 <div class="field pt-45">
                     <h2>技術網址 :</h2>
-                    <input type="text" id="password" required autocomplete="off" />
-                    <label for="password" title="Skill address" data-title="技術網址"></label>
+                    <input type="text" id="password_add" required autocomplete="off" />
+                    <label for="password_add" title="Skill address" data-title="技術網址"></label>
                 </div>
                 <a class="companyback_save btn_company_back">儲存</a>
             </form>
@@ -56,20 +56,20 @@
 
             <form action="#" class="companyback_form ">
                 <!-- icon -->
-                <aside class="companyback_layout blue" >2</aside>
+                <aside class="companyback_layout blue">2</aside>
                 <ol class="companyback_icon">
                     <li><a><i class="fa-regular fa-pen-to-square"></i></a></li>
                     <li> <a><i class="fa-regular fa-trash-can"></i></a></li>
                 </ol>
                 <div class="field pt-45">
                     <h2>技術名稱 :</h2>
-                    <input type="text" id="email" required autocomplete="off" class="" />
-                    <label for="email" title="Skill name" data-title="技術名稱"></label>
+                    <input type="text" id="skill_name1" required autocomplete="off" class="" />
+                    <label for="skill_name1" title="Skill name" data-title="技術名稱"></label>
                 </div>
                 <div class="field pt-45">
                     <h2>技術網址 :</h2>
-                    <input type="text" id="password" required autocomplete="off" />
-                    <label for="password" title="Skill address" data-title="技術網址"></label>
+                    <input type="text" id="password_add2" required autocomplete="off" />
+                    <label for="password_add2" title="Skill address" data-title="技術網址"></label>
                 </div>
                 <a class="companyback_save btn_company_back">儲存</a>
             </form>
@@ -83,13 +83,13 @@
 
                 <div class="field pt-45">
                     <h2>技術名稱 :</h2>
-                    <input type="text" id="email" required autocomplete="off" class="" />
-                    <label for="email" title="Skill name" data-title="技術名稱"></label>
+                    <input type="text" id="skill_name2" required autocomplete="off" class="" />
+                    <label for="skill_name2" title="Skill name" data-title="技術名稱"></label>
                 </div>
                 <div class="field pt-45">
                     <h2>技術網址 :</h2>
-                    <input type="text" id="password" required autocomplete="off" />
-                    <label for="password" title="Skill address" data-title="技術網址"></label>
+                    <input type="text" id="password3" required autocomplete="off" />
+                    <label for="password3" title="Skill address" data-title="技術網址"></label>
                 </div>
                 <a class="companyback_save btn_company_back">儲存</a>
             </form>
@@ -104,7 +104,7 @@
     </footer>
 
     <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- 先連結main再連結各自設的js -->
     <script src="js/main.min.js"></script>
     <script src="js/login.min.js"></script>
