fix: 修正現正直播頁面，1100px影片會有過高的問題，RWD版只要留言板收合時，文字動畫會無法出現，故移除文字動畫

--- a/src/live.html
+++ b/src/live.html
@@ -47,7 +47,7 @@
           <h2>
             抱歉，目前無直播<br />下一次直播時間 : <br />2022/03/14 09:00
           </h2>
-          <iframe width="900" height="500" src="" title="video" frameborder="0" class="live-video"
+          <iframe width="900" height="500" src="https://www.youtube.com/embed/at6SJkmogvQ?modestbranding=1&autoplay=1&playlist=at6SJkmogvQ" title="video" frameborder="0" class="live-video"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen>
           </iframe>
@@ -99,7 +99,7 @@
     <!-- 下方廠商介紹區 -->
     <div>
       <div class="live-company">
-        <ul class="live-company-text"  data-aos="fade-right" data-aos-duration="2000">
+        <ul class="live-company-text">
           <li>
             <div class="live-company-title">
               <img src="img/live/compnay-title.png" alt="現在直播廠商" />
@@ -115,7 +115,7 @@
             <h3>email: test@gmail.com</h3>
           </li>
         </ul>
-        <img src="img/live/live_circle_2.svg" alt="圓形圖案" class="img-circle" data-aos="fade" data-aos-duration="3000">
+        <img src="img/live/live_circle_2.svg" alt="圓形圖案" class="img-circle">
       </div>
     </div>
   </main>
