feat 修改 about頁面 data_aos部分效果 及fix 輪播scrollbar拉到最底的bug

--- a/src/about.html
+++ b/src/about.html
@@ -60,13 +60,13 @@
         <!-- <h2 class="about_date">04.01 - 06.30</h2> -->
       </div>
     </section>
-    <section class="wrapper about_brief wrapper_about" data-aos="slide-left" data-aos-duration="2000">
+    <section class="wrapper about_brief wrapper_about" data-aos="fade-up" data-aos-duration="2000">
       <div class="mb-10 about_title">會議簡介</div>
       <h3>疫情翻轉新常態．加速智慧轉型~~~~<br>
         新冠肺炎疫情自2020年爆發以來，徹底翻轉人類生活、工作與娛樂型態。遠距、零接觸成為「新常態」，促使國家、企業乃至個人，都要展開「智慧轉型」，以迎向後疫情時代，並緊緊握住復甦商機。在疫情期間展現優異的經濟韌性。疫情過後，全球更應該積極推動經濟轉型，邁入新形態市場，要強化數位轉型，更要提升民眾數位化能力。
       </h3>
     </section>
-    <section class="about_agenda " data-aos="slide-left" data-aos-duration="2000">
+    <section class="about_agenda " data-aos="fade-up" data-aos-duration="2000">
       <!-- <img src="img/about/abou_middleimg.png"> -->
       <div class="about_schedule wrapper wrapper_about">
         <div class="about_scheduleText">
