--- a/src/extend.html
+++ b/src/extend.html
@@ -23,6 +23,8 @@
   </script>
   <!-- is.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
+  <!-- SweetAlert -->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <title>聚策展-虛擬商展</title>
 </head>
 
