--- a/src/live.html
+++ b/src/live.html
@@ -27,6 +27,8 @@
   </script>
   <!-- is.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
+  <!-- SweetAlert -->
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <title>聚策展-現正直播</title>
 </head>
 
