--- a/src/news.html
+++ b/src/news.html
@@ -27,6 +27,8 @@
     </script>
     <!-- is.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
+    <!-- SweetAlert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>聚策展-新聞資訊</title>
 </head>
 
