fix 修正更改圖片檔案名 feat 更改about 和contect title

--- a/src/about.html
+++ b/src/about.html
@@ -28,7 +28,7 @@
   <!-- is.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
 
-  <title>About</title>
+  <title>聚策展-展會介紹</title>
 </head>
 
 <body>
@@ -174,10 +174,10 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide about_slide"><img src="img/sample/Logo1.png"></div>
           <div class="swiper-slide about_slide"><img src="img/sample/Logo2.png"></div>
-          <div class="swiper-slide about_slide"><img src="img/sample/Logo3.png"></div>
+          <div class="swiper-slide about_slide"><img src="img/sample/logo3.png"></div>
           <div class="swiper-slide about_slide"><img src="img/sample/Logo4.png"></div>
           <div class="swiper-slide about_slide"><img src="img/sample/Logo5.png"></div>
-          <div class="swiper-slide about_slide"><img src="img/sample/Logo6.png"></div>
+          <div class="swiper-slide about_slide"><img src="img/sample/logo6.png"></div>
           <div class="swiper-slide about_slide"><img src="img/sample/Logo7.png"></div>
         </div>
         <div class="swiper-scrollbar about_scrollbar"></div>
