--- a/src/contect.html
+++ b/src/contect.html
@@ -27,7 +27,7 @@
             emailjs.init("VmKwawpbImHtur7aa");
         })();
     </script>
-    <title>Contect</title>
+    <title>聚策展-聯絡我們</title>
 </head>
 
 <body>
