feat:調整左下光點樣式

--- a/src/index.html
+++ b/src/index.html
@@ -70,9 +70,14 @@
                 <img src="./img/index/041.png" class="index_disk">
 
                 <!-- 左下暗點 -->
-                <span class="index_dark_point1"></span>
+                <!-- <span class="index_dark_point1"></span>
                 <span class="index_dark_point2"></span>
-                <span class="index_dark_point3"></span>
+                <span class="index_dark_point3"></span> -->
+
+                <!-- 左下亮點 -->
+                <img src="./img/index/top_light.png" class="index_top_light">
+                <img src="./img/index/mid_light.png" class="index_mid_light">
+                <img src="./img/index/bot_light.png" class="index_bot_light">
 
 
                 <!-- mobile背景 -->
