feat.廠商資訊管理(html上方title更改名稱), scss info還未完成(絕對定位input)html_title三個更改完成 placeholder更改完成  三個html 兩個scss總共五個

--- a/src/companyback_info.html
+++ b/src/companyback_info.html
@@ -13,7 +13,7 @@
   <!-- title icon -->
   <link rel="icon" href="img/tianlam-logo-mainblack.svg">
 
-  <title>聚策展-範例頁</title>
+  <title>聚策展-廠商後台-廠商資訊管理</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     <section class="wrapper">
       <section class="wrapper company_wrapper">
         <div class="company_title">
-          <a class="title_skill">廠商資料設定區</a>
+          <a class="title_skill">廠商資訊管理</a>
         </div>
         <form action="" class="companyback_info_form">
           <ul class="all_input">
