--- a/src/companyback_live.html
+++ b/src/companyback_live.html
@@ -13,7 +13,7 @@
     <!-- title icon -->
     <link rel="icon" href="img/tianlam-logo-mainblack.svg">
 
-    <title>聚策展-範例頁</title>
+    <title>聚策展-廠商後台-技術展示區</title>
 </head>
 
 <body>
