--- a/src/companyback.html
+++ b/src/companyback.html
@@ -15,7 +15,7 @@
   <!-- 套件flatpickr -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
-  <title>聚策展-範例頁</title>
+  <title>聚策展-廠商後台-首頁</title>
 </head>
 
 <body>
@@ -37,8 +37,8 @@
 
         <!-- 這是套件 -->
         <div class="time_tech">
-          <input class="timepicker" type="time" placeholder="Select DateTime">
-          <input class="form-contril" type="datetime-local" placeholder="Select DateTime">
+          <input class="timepicker" type="time" placeholder="選擇當日時段">
+          <input class="form-contril" type="datetime-local" placeholder="點擊日歷">
 
         </div>
         <!-- <input type="date" class="companyback_time"> -->
@@ -49,7 +49,7 @@
           <input type="submit" value="確認送出" class="companyback_submit">
           <div class="field">
             <input type="text" id="email" required autocomplete="off" class="" />
-            <label for="email" title="Address" data-title="直播網址"></label>
+            <label for="email" title="LINK" data-title="直播網址"></label>
           </div>
         </div>
       </form>
