fix我的錯字(不好示範)

--- a/src/companyback.html
+++ b/src/companyback.html
@@ -38,7 +38,7 @@
         <!-- 這是套件 -->
         <div class="time_tech">
           <input class="timepicker" type="time" placeholder="選擇當日時段">
-          <input class="form-contril" type="datetime-local" placeholder="點擊日歷">
+          <input class="form-contril" type="datetime-local" placeholder="點擊日曆">
 
         </div>
         <!-- <input type="date" class="companyback_time"> -->
