--- a/src/backstage/backstage_index.html
+++ b/src/backstage/backstage_index.html
@@ -31,34 +31,21 @@
     </nav>
     <main id="page">
         <ul class="backstage_menu pall-5"  :class="{'-backstage_aside_on': aside_btn === true}">
-            <div class="mt-20 mb-10 -margin0auto "><a class="backstage_menu_btn"><h4>資訊管理</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo"></a></div>
-            <div class="backstage_menu_inner mb-10">
-                <a href="backstage_info1.html"><h4>展覽場次</h4></a>
-                <a href="backstage_info2.html"><h4>大會議程</h4></a>
-                <a href="backstage_info3.html"><h4>講師介紹</h4></a>
-                <a href="backstage_info4.html"><h4>新聞資訊</h4></a>
-                <a href="backstage_info5.html"><h4>聯絡我們</h4></a>
-            </div>
-            <div class="-margin0auto pb-10"><a class="backstage_menu_btn"><h4>會員管理</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo"></a></div>
-            <div class="backstage_menu_inner mb-10">
-                <a href="backstage_member1.html"><h4>來賓管理</h4></a>
-                <a href="backstage_member2.html"><h4>廠商管理</h4></a>
-            </div>
-            <div class="-margin0auto pb-10"><a class="backstage_menu_btn"><h4>活動管理</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo"></a></div>
-            <div class="backstage_menu_inner">
-                <a href="backstage_expo1.html"><h4>廠商資料</h4><a>
-                <a href="backstage_expo2.html"><h4>直播時段</h4></a>
-                <a href="backstage_expo3.html"><h4>直播審核表</h4></a>
-                <a href="backstage_expo4.html"><h4>直播留言板</h4></a>
+            <div  v-for="(page, index) in pages">
+                <div class="mt-20 mb-10 -margin0auto "><a class="backstage_menu_btn"><h4>{{page[0]}}</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo"></a></div>
+                <div class="backstage_menu_inner mb-10">
+                    <a v-for="(inner, index2) in page[1]" :class="{'-onpage':inner.onpage===true}" href="#" @click.prevent="changepage(index, index2)"><h4>{{inner.pagename}}</h4></a>
+                </div>
             </div>
             <img src="img/backstage/backstage_aside_btn.svg" alt="" @click="aside_toggle()" class="backstage_aside_btn"/>
         </ul>
         <section class="backstage_main">
             <img src="img/backstage/backstage_aside_btn.svg" alt="" @click="aside_toggle()" class="backstage_aside_btn pt-10 pl-10"/>
-            <datatable></datatable>
+            <component :is="table" :tablename="tablename"></component>
         </section>
     </main>
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/backstage_index.min.js"></script>
 </body>
 </html>
