--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,19 @@
     <!-- content，各自頁面的html寫在這邊以下都是範例 -->
     <main>
         <div class="index_block">
+            <!-- 背景圖 -->
+            <img src="./img/index/011.jpg" class="-margin0auto index_bcg_desktop">
+            
+            <!-- parallax兩側景 -->
+            <div id="scene">
+                <div data-depth="0.1">
+                    <!-- <img src="./img/index/011.jpg" class="-margin0auto index_bcg_desktop"> -->
+                </div>
+                <!-- <div data-depth="0.8">
+                    <img src="./img/index/011_left.jpg" class="-margin0auto index_bcg_desktop">
+                </div> -->
+            </div>
             <!-- 右側進度條跳動 -->
-                <img src="./img/index/011.jpg" class="-margin0auto index_bcg_desktop">
                 <div class="index_right_side">
                     <img src="./img/index/123.png" class="index_bar_img1">
                 </div>
