feat 更改名稱 live變tech

--- a/src/companyback_tech.html
+++ b/src/companyback_tech.html
@@ -108,7 +108,7 @@
     <!-- 先連結main再連結各自設的js -->
     <script src="js/main.min.js"></script>
     <script src="js/login.min.js"></script>
-    <script src="js/companyback_live.min.js"></script>
+    <script src="js/companyback_tech.min.js"></script>
 </body>
 
 </html>
