--- a/src/backstage/backstage_index.html
+++ b/src/backstage/backstage_index.html
@@ -47,5 +47,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/backstage_index.min.js"></script>
+  <script src="js/backstage_member2.min.js"></script>
+  
 </body>
 </html>
