--- a/src/backstage/backstage_index.html
+++ b/src/backstage/backstage_index.html
@@ -2,23 +2,25 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-  <!-- boostrap form switch按鈕 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <!-- css -->
-  <link rel="stylesheet" href="./css/style.min.css" />
-  <!-- font awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
-  <!-- title icon -->
-  <link rel="icon" href="img/tianlam-logo-mainblack.svg">
-  <!-- vue -->
-  <script src="js/vue.min.js"></script>
-  <!-- alert套件 -->
-  <script src="https://unpkg.com/vue-swal"></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <!-- boostrap form switch按鈕 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <!-- css -->
+    <link rel="stylesheet" href="./css/style.min.css" />
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
+        integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
+    <!-- title icon -->
+    <link rel="icon" href="img/tianlam-logo-mainblack.svg">
+    <!-- vue -->
+    <script src="js/vue.min.js"></script>
+    <!-- alert套件 -->
+    <script src="https://unpkg.com/vue-swal"></script>
 
-  <title>聚策展-後台中心</title>
+    <title>聚策展-後台中心</title>
 </head>
 
 <body class="backstage_body">
@@ -26,26 +28,38 @@
         <a href="./index.html" class="logo"><img src="img/tianlam-logo-backstage.svg" alt="logo" class="img"></img></a>
         <h3 class="ml-45">Tián lám➪後台中心</h3>
         <ul class="flex-box-end">
-            <li><a href="index.html" class="backstage_logout"><h4>帳號登出</h4><img src="img/backstage_logout.svg" alt="logout" class="ml-6"></a></li>
+            <li><a href="index.html" class="backstage_logout">
+                    <h4>帳號登出</h4><img src="img/backstage_logout.svg" alt="logout" class="ml-6">
+                </a></li>
         </ul>
     </nav>
     <main id="page">
-        <ul class="backstage_menu pall-5"  :class="{'-backstage_aside_on': aside_btn === true}">
-            <div  v-for="(page, index) in pages">
-                <div class="mt-20 mb-10 -margin0auto "><a class="backstage_menu_btn"><h4>{{page[0]}}</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo"></a></div>
+        <ul class="backstage_menu pall-5" :class="{'-backstage_aside_on': aside_btn === true}">
+            <div v-for="(page, index) in pages">
+                <div class="mt-20 mb-10 -margin0auto "><a class="backstage_menu_btn">
+                        <h4>{{page[0]}}</h4><img src="img/backstage/backstage-arrow-down-circle.svg" alt="logo">
+                    </a></div>
                 <div class="backstage_menu_inner mb-10">
-                    <a v-for="(inner, index2) in page[1]" :class="{'-onpage':inner.onpage===true}" href="#" @click.prevent="changepage(index, index2)"><h4>{{inner.pagename}}</h4></a>
+                    <a v-for="(inner, index2) in page[1]" :class="{'-onpage':inner.onpage===true}" href="#"
+                        @click.prevent="changepage(index, index2)">
+                        <h4>{{inner.pagename}}</h4>
+                    </a>
                 </div>
             </div>
-            <img src="img/backstage/backstage_aside_btn.svg" alt="" @click="aside_toggle()" class="backstage_aside_btn"/>
+            <img src="img/backstage/backstage_aside_btn.svg" alt="" @click="aside_toggle()"
+                class="backstage_aside_btn" />
         </ul>
         <section class="backstage_main">
-            <img src="img/backstage/backstage_aside_btn.svg" alt="" @click="aside_toggle()" class="backstage_aside_btn pt-10 pl-10"/>
+            <img src="img/backstage/backstage_aside_btn.svg" alt="" @click="aside_toggle()"
+                class="backstage_aside_btn pt-10 pl-10" />
             <component :is="table" :tablename="tablename"></component>
         </section>
     </main>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="js/backstage_index.min.js"></script>
+    <script src="js/backstage_index.min.js"></script>
+    <script src="js/backstage_info4.min.js"></script>
+
 </body>
+
 </html>
