feat:修改右側bar條為gif檔替換

--- a/src/index.html
+++ b/src/index.html
@@ -85,11 +85,11 @@
                         <!-- 右側區塊 -->
                         <div data-depth="0.3" class="index_paraItems_right">
                             <img src="./img/index/right_side_monitor.png" class="index_right_monitor">
-                            <img src="./img/index/123.png" class="index_right_bar1">
-                            <img src="./img/index/132.png" class="index_right_bar2">
+                            <img src="./img/index/barAll2.gif" class="index_right_bar1">
+                            <!-- <img src="./img/index/132.png" class="index_right_bar2">
                             <img src="./img/index/213.png" class="index_right_bar3">
                             <img src="./img/index/231.png" class="index_right_bar4">
-                            <img src="./img/index/312.png" class="index_right_bar5">
+                            <img src="./img/index/312.png" class="index_right_bar5"> -->
                         </div>                                        
                     </div>
                 </div>
@@ -100,9 +100,9 @@
             <img src="./img/index/031.jpg" class="=margin0auto index_bcg_mobile">
 
             <div class="index_right_side -hide">
-                <img src="./img/index/123.png" class="index_bar_img1">
+                <img src="./img/index/barAll2.gif" class="index_bar_img1">
             </div>
-            <div class="index_right_side -hide">
+            <!-- <div class="index_right_side -hide">
                 <img src="./img/index/132.png" class="index_bar_img2">
             </div>
             <div class="index_right_side -hide">
@@ -113,7 +113,7 @@
             </div>
             <div class="index_right_side -hide">
                 <img src="./img/index/312.png" class="index_bar_img5">
-            </div>
+            </div> -->
 
             <!-- <div class="swiper-button-next index_mobile_btnNext"></div>
             <div class="swiper-button-prev index_mobile_btnPrev"></div>
