feat:修改extend上方輪播樣式

--- a/src/extend.html
+++ b/src/extend.html
@@ -38,9 +38,10 @@
     @@include('layout/login.html')
   </header>
   <!-- content，各自頁面的html寫在這邊 -->
-  <main>
+  <main id="app">
     <section class="extend_main">
       <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper2 wrapper">
+        <h3>參與廠商</h3>
         <div thumbsSlider="" class="swiper mySwiper extend_head">
           <div class= "swiper-wrapper">
             <div class="swiper-slide">
@@ -68,10 +69,10 @@
               <img src="img/sample/logo8.png" />
             </div>
             <div class="swiper-slide">
-              <img src="img/about/about_banner.png" />
+              <img src="img/sample/logo9.png" />
             </div>
             <div class="swiper-slide">
-              <img src="img/extend/robot1.png" />
+              <img src="img/sample/logo10.png" />
             </div>
           </div>
         </div>
